--- a/litreview.bib
+++ b/litreview.bib
@@ -730,6 +730,8 @@
 
 @misc{design-voldemort, title={Design}, url={http://www.project-voldemort.com/voldemort/design.html}, journal={Design - Voldemort}} 
 
+@misc{hadoop-ecosystem, title={Hadoop}, url={https://hadoopecosystemtable.github.io/}} 
+
 @article{howard_scale_1988,
     title = {Scale and performance in a distributed file system},
     volume = {6},
@@ -806,4 +808,17 @@
 	author = {Shvachko, Konstantin and Kuang, Hairong and Radia, Sanjay and Chansler, Robert},
 	year = {2010},
 	pages = {1--10},
+}
+
+
+@article{vijayakumari_comparative_2014,
+    title = {Comparative analysis of google file system and hadoop distributed file system},
+    volume = {3},
+    url = {http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.454.4159&rep=rep1&type=pdf},
+    number = {1},
+    urldate = {2017-02-17},
+    journal = {ICETS-International Journal of Advanced Trends in Computer Science and Engineering},
+    author = {Vijayakumari, R. and Kirankumar, R. and Rao, K. Gangadhara},
+    year = {2014},
+    pages = {553--558},
 }
