--- a/litreview.bib
+++ b/litreview.bib
@@ -822,3 +822,17 @@
     year = {2014},
     pages = {553--558},
 }
+
+
+@article{corbett_spanner:_2013,
+    title = {Spanner: {Google}’s globally distributed database},
+    volume = {31},
+    shorttitle = {Spanner},
+    url = {http://dl.acm.org/citation.cfm?id=2491245},
+    number = {3},
+    urldate = {2017-02-02},
+    journal = {ACM Transactions on Computer Systems (TOCS)},
+    author = {Corbett, James C. and Dean, Jeffrey and Epstein, Michael and Fikes, Andrew and Frost, Christopher and Furman, Jeffrey John and Ghemawat, Sanjay and Gubarev, Andrey and Heiser, Christopher and Hochschild, Peter and {others}},
+    year = {2013},
+    pages = {8},
+}
