--- a/litreview.bib
+++ b/litreview.bib
@@ -836,3 +836,36 @@
     year = {2013},
     pages = {8},
 }
+
+
+@article{lakshman_cassandra:_2010,
+    title = {Cassandra: a decentralized structured storage system},
+    volume = {44},
+    shorttitle = {Cassandra},
+    url = {http://dl.acm.org/citation.cfm?id=1773922},
+    number = {2},
+    urldate = {2017-02-02},
+    journal = {ACM SIGOPS Operating Systems Review},
+    author = {Lakshman, Avinash and Malik, Prashant},
+    year = {2010},
+    pages = {35--40},
+}
+
+@inproceedings{hayashibara2004spl,
+    title={The/spl phi/accrual failure detector},
+    author={Hayashibara, Naohiro and Defago, Xavier and Yared, Rami and Katayama, Takuya},
+    booktitle={Reliable Distributed Systems, 2004. Proceedings of the 23rd IEEE International Symposium on},
+    pages={66--78},
+    year={2004},
+    organization={IEEE}
+}
+
+@article{khetrapal_hbase_2006,
+    title = {{HBase} and {Hypertable} for large scale distributed storage systems},
+    url = {http://cloud.pubs.dbs.uni-leipzig.de/sites/cloud.pubs.dbs.uni-leipzig.de/files/Khetrapal2008HBaseandHypertableforlargescaledistributedstorage.pdf},
+    urldate = {2017-02-22},
+    journal = {Dept. of Computer Science, Purdue University},
+    author = {Khetrapal, Ankur and Ganesh, Vinay},
+    year = {2006},
+    pages = {22--28},
+}
