--- a/litreview.bib
+++ b/litreview.bib
@@ -869,3 +869,16 @@
     year = {2006},
     pages = {22--28},
 }
+
+@article{mongo_arch_2016,
+    title={MongoDB Architecture Guide},
+    author={MongoDB},
+    year={2016},
+}
+
+@book{anderson2010couchdb,
+    title={CouchDB: the definitive guide},
+    author={Anderson, J Chris and Lehnardt, Jan and Slater, Noah},
+    year={2010},
+    publisher={" O'Reilly Media, Inc."}
+}
