--- a/litreview.bib
+++ b/litreview.bib
@@ -882,3 +882,28 @@
     year={2010},
     publisher={" O'Reilly Media, Inc."}
 }
+
+
+@inproceedings{han_survey_2011,
+    title = {Survey on {NoSQL} database},
+    url = {http://ieeexplore.ieee.org/abstract/document/6106531/},
+    urldate = {2017-02-02},
+    booktitle = {Pervasive computing and applications ({ICPCA}), 2011 6th international conference on},
+    publisher = {IEEE},
+    author = {Han, Jing and Haihong, E. and Le, Guan and Du, Jian},
+    year = {2011},
+    pages = {363--366},
+}
+
+
+@article{cattell_scalable_2011,
+    title = {Scalable {SQL} and {NoSQL} data stores},
+    volume = {39},
+    url = {http://dl.acm.org/citation.cfm?id=1978919},
+    number = {4},
+    urldate = {2017-02-10},
+    journal = {Acm Sigmod Record},
+    author = {Cattell, Rick},
+    year = {2011},
+    pages = {12--27},
+}
