--- a/litreview.tex
+++ b/litreview.tex
@@ -578,7 +578,11 @@ SimpleDB does not provide any manual index control. Instead, you can define mult
 Even though SimpleDB provides a rather \textit{simple} data model, it's provided as a service build on top of Amazon's cloud architecture. This allows you to scale as needed and only pay for what you use. 
 
 \subsection{Graph}
-TODO.
+Graph databases are unique in the way that they store and relate data. Graph databases specialize in efficiently managing heavily linked data\cite{cattell_scalable_2011}.
+
+Data in graph databases are related along node, edges, and properties of a graph data structure\cite{sharma_extended_2015}. Items in graph databases directly point to their nearest neighbors and graph algorithms are used to traverse the data model.
+
+Graph databases are an integral part of big data, especially in social relations. Social networks such and Twitter and Facebook store massive amount of social interactions using graph databases. This data can be used in cluster analysis or other forms to learn about the interactions and communities within a platform. Graph databases are also used in location based services for path finding or recommendation systems\cite{cattell_scalable_2011}.
 
 \subsection{Misc.}
 \subsubsection{Megastore}
